tests/transpiler/x/fortran/group_by_multi_join.error
error[I008]: cannot apply operator '==' to types null and null
  --> /workspace/mochi/tests/vm/valid/group_by_multi_join.mochi:16:31

 16 |   join s in suppliers on s.id == ps.supplier
    |                               ^

help:
  Use compatible types for the operator.